--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 * {
-    border: 0;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .app__container {
-    display: flex;
-    background: #D9D9D9;
-    justify-content: center;
-    height: 1200px;
+  display: flex;
+  background: #d9d9d9;
+  justify-content: center;
+  height: 1200px;
 }
