--- a/src/components/CharacterInfo/characterInfo.css
+++ b/src/components/CharacterInfo/characterInfo.css
@@ -1,82 +1,80 @@
-
 .character__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 800px;
-    max-height: 740px;
-    width: 100%;
-    height: 100%;
-    background: #bfb9b9;
-    border-radius: 500px 60px 300px 100px;
-    font-family: 'Inter', sans-serif;
-    box-shadow: 8px 4px 3px 0 rgba(66, 68, 90, 0.8);
-    padding-bottom: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 800px;
+  max-height: 740px;
+  width: 100%;
+  height: 100%;
+  background: #bfb9b9;
+  border-radius: 500px 60px 300px 100px;
+  font-family: "Inter", sans-serif;
+  box-shadow: 8px 4px 3px 0 rgba(66, 68, 90, 0.8);
+  padding-bottom: 70px;
 }
 
 .img-main {
-    width: 100%;
-    max-height: 380px;
-    border-radius: 200px 20px 100px 50px;
+  width: 100%;
+  max-height: 380px;
+  border-radius: 200px 20px 100px 50px;
 }
 
 .img-holder {
-    margin: 140px 100px 0 100px;
+  margin: 140px 100px 0 100px;
 }
 
 .character__container-name {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-    justify-content: center;
-    margin-top: 35px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  justify-content: center;
+  margin-top: 35px;
 }
 
 .char-name {
-    margin: 0 auto 0 auto;
-    font-weight: 800;
-    font-size: 50px;
-    text-align: center;
-    max-width: 400px;
+  margin: 0 auto 0 auto;
+  font-weight: 800;
+  font-size: 50px;
+  text-align: center;
+  max-width: 400px;
 }
 
 .icons {
-    display: flex;
-    gap: 14px;
-    float: right;
+  display: flex;
+  gap: 14px;
+  float: right;
 }
 
 .check {
-    width: 45px;
-    height: 45px;
+  width: 45px;
+  height: 45px;
 }
 
 .fav {
-    width: 53px;
-    height: 40px;
+  width: 53px;
+  height: 40px;
 }
 
 .character-info {
-    font-weight: 100;
-    font-style: italic;
-    display: flex;
-    flex-direction: column;
-    font-size: 20px;
-    margin-right: 160px;
-    width: 250px;
+  font-weight: 100;
+  font-style: italic;
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  margin-right: 160px;
+  width: 250px;
 }
 
-
 @media only screen and (max-width: 540px) {
-    .img-holder {
-        margin: 100px 20px 0 20px;
-    }
+  .img-holder {
+    margin: 100px 20px 0 20px;
+  }
 
-    .character__container {
-        border-radius: 300px 50px 250px 80px;
-    }
+  .character__container {
+    border-radius: 300px 50px 250px 80px;
+  }
 
-    .character-info {
-        margin-right: 70px;
-    }
+  .character-info {
+    margin-right: 70px;
+  }
 }
