--- a/src/containers/FormPage/formPage.css
+++ b/src/containers/FormPage/formPage.css
@@ -1,161 +1,149 @@
 /*general*/
 
 .form__container {
-    max-width: 1130px;
-    width: 100%;
-    height: 100%;
-    background: white;
-    font-family: 'Inter', sans-serif;
-    font-weight: 700;
-    font-size: 20px;
+  max-width: 1130px;
+  width: 100%;
+  height: 100%;
+  background: white;
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 20px;
 }
 
 .form__container-content {
-    display: flex;
-    flex-direction: column;
-    margin: 0 174px 0 203px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 174px 0 203px;
 }
 
 .register-form-title {
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    margin-left: auto;
-    margin-top: 108px;
-    font-weight: 800;
-    font-size: 20px;
-    letter-spacing: 0.15em;
-    line-height: 165%;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  margin-left: auto;
+  margin-top: 108px;
+  font-weight: 800;
+  font-size: 20px;
+  letter-spacing: 0.15em;
+  line-height: 165%;
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .label-main {
-    display: flex;
-    flex-direction: column
+  display: flex;
+  flex-direction: column;
 }
 
 .border-title {
-    width: 166px;
-    height: 9px;
-    background: #071594;
-    margin: 21px 0 65px auto;
+  width: 166px;
+  height: 9px;
+  background: #071594;
+  margin: 21px 0 65px auto;
 }
 
 .label-main input {
-    outline: none;
-    margin-top: 33px;
-    font-size: 20px;
+  outline: none;
+  margin-top: 33px;
+  font-size: 20px;
 }
 
 /*everything with checkbox*/
 
 .checkbox {
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-    margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 20px;
 }
 
 .hide {
-    display: none;
+  display: none;
 }
 
 .checkbox input {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
 
 .checkbox input {
-    position: absolute;
-    opacity: 0;
+  position: absolute;
+  opacity: 0;
 }
-
 
 .checkbox .overlay {
-    position: relative;
-    height: 30px;
-    width: 30px;
-    background-color: transparent;
-    border-radius: 5px;
-    border: 3px solid black;
-    transition: all 0.3s ease-in-out;
+  position: relative;
+  height: 30px;
+  width: 30px;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 3px solid black;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .checkbox .overlay .icon {
-    color: white;
-    display: none;
+  color: white;
+  display: none;
 }
 
 .checkbox input:checked ~ .overlay {
-    background-color: black;
-    opacity: 1;
-
+  background-color: black;
+  opacity: 1;
 }
-
 
 .form button {
-    width: 220px;
-    height: 55px;
-    background: #071594;
-    box-shadow: 10px 4px 4px rgba(0, 0, 0, 0.75);
-    border-radius: 20px;
-    font-family: Lato, sans-serif;
-    font-style: italic;
-    font-weight: 400;
-    font-size: 30px;
-    color: #FFFFFF;
-    -webkit-text-stroke: 1px #D9D9D9;;
-    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    cursor: pointer;
-    margin: 0 auto;
+  width: 220px;
+  height: 55px;
+  background: #071594;
+  box-shadow: 10px 4px 4px rgba(0, 0, 0, 0.75);
+  border-radius: 20px;
+  font-family: Lato, sans-serif;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 30px;
+  color: #ffffff;
+  -webkit-text-stroke: 1px #d9d9d9;
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  margin: 0 auto;
 }
-
 
 /*everything with error handle*/
 
 .correct,
 .error {
-    display: flex;
-    justify-content: flex-end;
-    border-top-width: 2px;
-    border-top-style: solid;
-    height: 36px;
-    width: 100%;
-    font-style: italic;
-    font-weight: 300;
-    font-size: 20px;
-
+  display: flex;
+  justify-content: flex-end;
+  border-top-width: 2px;
+  border-top-style: solid;
+  height: 36px;
+  width: 100%;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 20px;
 }
 
 .correct {
-    border-color: black;
-    color: rgba(255, 255, 255, 0);
+  border-color: black;
+  color: rgba(255, 255, 255, 0);
 }
 
 .error {
-    border-color: red;
-    color: rgba(255, 0, 0);
+  border-color: red;
+  color: rgba(255, 0, 0);
 }
 
 .error-check {
-    font-style: italic;
-    font-weight: 300;
-    font-size: 20px;
-    color: red;
-    margin-left: 30px;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 20px;
+  color: red;
+  margin-left: 30px;
 }
 
 .error-checkbox {
-    border: 2px solid red !important;
+  border: 2px solid red !important;
 }
-
-
-
-
-
-
-
-
